@@ -14,6 +14,7 @@ import org.springframework.http.ResponseEntity;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
@@ -35,11 +36,7 @@ class OrderControllerTest {
     private UUID mejaId;
     private UUID orderId;
     private OrderDto.OrderRequest orderRequest;
-    private UUID orderResponseId;
     private OrderDto.OrderResponse orderResponse;
-    private UUID orderItemResponseId;
-    private OrderDto.OrderItemRequest itemRequest;
-    private OrderDto.UpdateOrderItemRequest updateItemRequest;
     private TableSession mockTableSession;
 
     @BeforeEach
@@ -58,8 +55,8 @@ class OrderControllerTest {
                 ))
                 .build();
 
-        orderResponseId = UUID.randomUUID();
-        orderItemResponseId = UUID.randomUUID();
+        UUID orderResponseId = UUID.randomUUID();
+        UUID orderItemResponseId = UUID.randomUUID();
         orderResponse = OrderDto.OrderResponse.builder()
                 .id(orderResponseId)
                 .mejaId(mejaId)
@@ -78,15 +75,6 @@ class OrderControllerTest {
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
-
-        itemRequest = OrderDto.OrderItemRequest.builder()
-                .menuItemId("menu-2")
-                .quantity(1)
-                .build();
-
-        updateItemRequest = OrderDto.UpdateOrderItemRequest.builder()
-                .quantity(3)
-                .build();
     }
 
     @Test
@@ -100,7 +88,6 @@ class OrderControllerTest {
         assertNotNull(response);
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
 
-        // Extract and verify the future result
         CompletableFuture<OrderDto.OrderResponse> future = response.getBody();
         assertNotNull(future);
         assertEquals(orderResponse, future.join());
@@ -120,103 +107,67 @@ class OrderControllerTest {
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
+        assertEquals(1, Objects.requireNonNull(response.getBody()).size());
 
-        // Extract and verify the future result
-        OrderDto.OrderResponse actualResponse = response.getBody().get(0).join();
+        OrderDto.OrderResponse actualResponse = response.getBody().getFirst().join();
         assertEquals(orderResponse, actualResponse);
 
         verify(orderService).getOrdersByMejaId(mejaId);
     }
 
     @Test
-    void getOrderById_Success() {
-        UUID orderId = UUID.randomUUID();
+    void updateOrder_Success() {
+        OrderDto.OrderRequest updateRequest = OrderDto.OrderRequest.builder()
+                .items(List.of(
+                        OrderDto.OrderItemRequest.builder()
+                                .menuItemId("menu-1")
+                                .quantity(3)
+                                .build()
+                ))
+                .build();
 
-        when(orderService.getOrderById(orderId)).thenReturn(CompletableFuture.completedFuture(orderResponse));
-
-        ResponseEntity<CompletableFuture<OrderDto.OrderResponse>> response =
-                orderController.getOrderById(orderId);
-
-        assertNotNull(response);
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-
-        // Extract and verify the future result
-        CompletableFuture<OrderDto.OrderResponse> future = response.getBody();
-        assertNotNull(future);
-        assertEquals(orderResponse, future.join());
-
-        verify(orderService).getOrderById(orderId);
-    }
-
-    @Test
-    void addItemToOrder_Success() {
-        UUID orderId = UUID.randomUUID();
-
-        when(orderService.addItemToOrder(eq(orderId), any(OrderDto.OrderItemRequest.class)))
+        when(orderService.updateOrder(eq(String.valueOf(orderId)), any(OrderDto.OrderRequest.class)))
                 .thenReturn(CompletableFuture.completedFuture(orderResponse));
 
         ResponseEntity<CompletableFuture<OrderDto.OrderResponse>> response =
-                orderController.addItemToOrder(orderId, itemRequest);
+                orderController.updateOrder(mockTableSession, updateRequest);
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
 
-        // Extract and verify the future result
         CompletableFuture<OrderDto.OrderResponse> future = response.getBody();
         assertNotNull(future);
         assertEquals(orderResponse, future.join());
 
-        verify(orderService).addItemToOrder(orderId, itemRequest);
-    }
-
-    @Test
-    void updateOrderItem_Success() {
-        UUID orderId = UUID.randomUUID();
-        UUID itemId = UUID.randomUUID();
-
-        when(orderService.updateOrderItem(eq(orderId), eq(itemId), any(OrderDto.UpdateOrderItemRequest.class)))
-                .thenReturn(CompletableFuture.completedFuture(orderResponse));
-
-        ResponseEntity<CompletableFuture<OrderDto.OrderResponse>> response =
-                orderController.updateOrderItem(orderId, itemId, updateItemRequest);
-
-        assertNotNull(response);
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-
-        // Extract and verify the future result
-        CompletableFuture<OrderDto.OrderResponse> future = response.getBody();
-        assertNotNull(future);
-        assertEquals(orderResponse, future.join());
-
-        verify(orderService).updateOrderItem(orderId, itemId, updateItemRequest);
+        verify(orderService).updateOrder(String.valueOf(orderId), updateRequest);
     }
 
     @Test
     void removeItemFromOrder_Success() {
-        UUID orderId = UUID.randomUUID();
         UUID itemId = UUID.randomUUID();
-        when(orderService.removeItemFromOrder(orderId, itemId)).thenReturn(orderResponse);
+
+        when(orderService.removeItemFromOrder(String.valueOf(orderId), itemId)).thenReturn(orderResponse);
 
         ResponseEntity<OrderDto.OrderResponse> response =
-                orderController.removeItemFromOrder(orderId, itemId);
+                orderController.removeItemFromOrder(mockTableSession, itemId);
 
         assertNotNull(response);
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(orderResponse, response.getBody());
-        verify(orderService).removeItemFromOrder(orderId, itemId);
+
+        verify(orderService).removeItemFromOrder(String.valueOf(orderId), itemId);
     }
 
     @Test
     void deleteOrder_Success() {
-        UUID orderId = UUID.randomUUID();
-        doNothing().when(orderService).deleteOrder(orderId);
+        UUID orderIdToDelete = UUID.randomUUID();
+        doNothing().when(orderService).deleteOrder(orderIdToDelete);
 
-        ResponseEntity<Void> response = orderController.deleteOrder(orderId);
+        ResponseEntity<Void> response = orderController.deleteOrder(orderIdToDelete);
 
         assertNotNull(response);
         assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
         assertNull(response.getBody());
-        verify(orderService).deleteOrder(orderId);
+        verify(orderService).deleteOrder(orderIdToDelete);
     }
 }
